boreal/tests/assets/invalid_files/compilation/unauthorized_include.yar
// [error: includes are not allowed]
// [disable includes]
rule a {
    condition: true
}

include "./valid.yar"
